# Zotero_RAG

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  mcp_client.py  pyproject.toml
scripts/: concurrency_smoke_test.py  diagnose_pdfs.py
src/: zotero_client.py
src/semtero/: __init__.py  citation_extractor.py  config.py  doi_client.py  embedding_manager.py  logging_setup.py  mcp_server.py  models.py  pdf_processor.py  reranker.py  search_engine.py  vector_store.py  zotero_client.py
src/zoterorag/: __init__.py  config.py  doi_client.py  embedding_manager.py  mcp_server.py  models.py  pdf_processor.py  reranker.py  search_engine.py  vector_store.py  zotero_client.py
tests/: test_citation_extractor.py  test_config.py  test_embedding_manager.py  test_logging_setup.py  test_mcp_server.py  test_models.py  test_ollama.py  test_pdf_processor.py  test_pdf_processor_extended.py  test_reranker.py  test_search_engine.py  test_skip_embedded.py  test_vector_store.py  test_webui_api.py  test_zotero_client.py  test_zoterorag.py
webui/: __init__.py  app.py
webui/static/: app.js  style.css
webui/templates/: index.html
