[project]
name = "zoterorag"
version = "0.1.0"
description = "MCP server for RAG search in Zotero library using Ollama"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pymupdf4llm>=0.0.20",
    "chromadb==1.5.1",
    "ollama>=0.6.1",
    "numpy>=1.24",
    "tenacity>=8.0",
    "pymupdf-layout",
    "fastmcp",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
