[project]
name = "semtero"
version = "0.1.0"
description = "SemTero MCP server for RAG search in your Zotero library"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "pymupdf4llm>=0.0.20",
    "lancedb",
    "ollama>=0.6.1",
    "numpy>=1.24",
    "tenacity>=8.0",
    "pymupdf-layout",
    "fastmcp",
    "python-dotenv>=1.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "flask>=3.1.3",
    "ruff>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]
